fixxing style issue on safari

--- a/css/style.css
+++ b/css/style.css
@@ -386,4 +386,7 @@ img{
     width: 40%;
     margin-top: 2%;
   }
+  .contact-info{
+    width: 100%;
+  }
 }
